lexion_lang/tests/snapshots/compile_err__address_of_is_not_assignment_target.snap
---
source: lexion_lang/tests/compile_err.rs
expression: "errors.join(\"\\n\")"
---
  x lvalue required as left operand of assignment
   ,-[tests/fixtures/errors/semantics/invalid_address_assignment.lex:3:5]
 2 |     let value = 1;
 3 |     &value = 2;
   :     ^^^|^^
   :        `-- here
 4 | }
   `----
