lexion_lang/tests/snapshots/compile_err__call_argument_type_mismatch.snap
---
source: lexion_lang/tests/compile_err.rs
expression: "errors.join(\"\\n\")"
snapshot_kind: text
---
  x expected type 'i32', instead got 'bool'
   ,-[tests/fixtures/errors/semantics/call_argument_type_mismatch.lex:6:24]
 5 | fn main() {
 6 |     let value = negate(true);
   :                        ^^|^
   :                          `-- here
 7 | }
   `----
