lexion_lang/tests/snapshots/compile_err__call_arity_mismatch.snap
---
source: lexion_lang/tests/compile_err.rs
expression: "errors.join(\"\\n\")"
snapshot_kind: text
---
  x function of type 'fn (i32, i32) -> i32' called with 1 argument(s), but expected 2
   ,-[tests/fixtures/errors/semantics/call_arity_mismatch.lex:6:17]
 5 | fn main() {
 6 |     let value = add(1);
   :                 ^^^|^^
   :                    `-- here
 7 | }
   `----
