lexion_lang/tests/snapshots/compile_err__function_declaration_cannot_be_borrowed.snap
---
source: lexion_lang/tests/compile_err.rs
expression: "errors.join(\"\\n\")"
snapshot_kind: text
---
  x cannot borrow a function declaration
   ,-[tests/fixtures/errors/semantics/function_declaration_borrow.lex:6:25]
 5 | fn main() -> i32 {
 6 |     let callback_ref = &add_one;
   :                         ^^^|^^^
   :                            `-- here
 7 |     return (*callback_ref)(4);
   `----
