lexion_lang/tests/snapshots/compile_err__function_declaration_is_not_assignment_target.snap
---
source: lexion_lang/tests/compile_err.rs
expression: "errors.join(\"\\n\")"
---
  x lvalue required as left operand of assignment
    ,-[tests/fixtures/errors/semantics/function_assignment.lex:10:5]
  9 | fn main() -> i32 {
 10 |     f = g;
    :     |
    :     `-- here
 11 |     return f(1);
    `----
