lexion_lang/tests/snapshots/compile_err__if_branch_type_mismatch.snap
---
source: lexion_lang/tests/compile_err.rs
expression: "errors.join(\"\\n\")"
snapshot_kind: text
---
  x expected type 'i32', instead got 'bool'
   ,-[tests/fixtures/errors/semantics/if_branch_type_mismatch.lex:2:36]
 1 | fn main() {
 2 |     let value = if true { 1 } else { false };
   :                                    ^^^^|^^^^
   :                                        `-- here
 3 | }
   `----
