lexion_lang/tests/snapshots/compile_err__invalid_cast.snap
---
source: lexion_lang/tests/compile_err.rs
expression: "errors.join(\"\\n\")"
snapshot_kind: text
---
  x cannot cast type '&str' to 'i32'
   ,-[tests/fixtures/errors/semantics/invalid_cast.lex:2:17]
 1 | fn main() {
 2 |     let value = "abc" as i32;
   :                 ^^^^^^|^^^^^
   :                       `-- here
 3 | }
   `----
