lexion_lang/tests/snapshots/compile_err__invalid_index_base.snap
---
source: lexion_lang/tests/compile_err.rs
expression: "errors.join(\"\\n\")"
snapshot_kind: text
---
  x type 'i32' cannot be indexed
   ,-[tests/fixtures/errors/semantics/invalid_index_base.lex:2:17]
 1 | fn main() {
 2 |     let value = 1[0];
   :                 ^^|^
   :                   `-- here
 3 | }
   `----
